<?xml version="1.0"?>
<package format="3">
  <name>rosrobot_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for rosrobot.
    This package contains configuration data, 3D models and launch files for rosrobot robot.
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时/构建时依赖 -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>

  <!-- Gazebo Harmonic 仿真依赖（gazebo_ros → ros_gz_sim / gz_ros2_control） -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros2_control</exec_depend>

  <!-- ROS2 中启动文件由 launch_ros 处理，无需显式依赖 roslaunch -->
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>